--- a/index.html
+++ b/index.html
@@ -3,47 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>slider</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Simple Website</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <header>
-            <h1>Welcome to My Simple Website</h1>
-        </header>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-        <section id="home">
-            <h2>Home</h2>
-            <p>This is a simple website built with HTML and CSS. Easy to build and run.</p>
-        </section>
-        <section id="about">
-            <h2>About</h2>
-            <p>Learn more about this basic yet effective website structure.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Reach out to us for more information.</p>
-        </section>
-        <footer>
-            <p>&copy; 2025 Simple Website. All rights reserved.</p>
-        </footer>
-    </body>
-    </html>
+    
+  
 
-<img src="C:\Users\hp\Downloads\premium_photo-1664474619075-644dd191935f.jpg" alt="" srcset="">
+    </div>
+   
+   
+    <script src="script.js"></script>
+
+
 
 
 </body>
